src/test/deca/context/invalid/class10.deca
#include "class2.deca"
class A {
	boolean a;
}


{
	A a;
	boolean b = a.a;
}